Misc cleanups in error validators